# quickpix

./: .gitignore  .npmignore  Cargo.toml  LICENSE  README.en.md  README.ko.md  README.md  package.json
.github/workflows/: publish.yml
bench/: compare-bench.mjs  memory-bench.mjs  native-bench.mjs  quality-bench.mjs  resize-bench.mjs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs  utils.rs
examples/bundlers/: README.md  esbuild.config.md  esbuild.config.mjs  next.config.js  quickpix-worker-example.js  rollup.config.js  vite.config.js  webpack.config.js
js/src/: chunked-resize.js  decode.d.ts  decode.js  easy.d.ts  easy.js  encode.d.ts  encode.js  fallback.js  index.d.ts  index.js  metadata.d.ts  metadata.js  pipeline-worker.js  resize-worker.js  utils.d.ts  utils.js  wasm-loader.js  worker-pool.d.ts  worker-pool.js  worker-sources.js  worker-utils.js
js/src/wasm/: quickpix_wasm.d.ts  quickpix_wasm.js  quickpix_wasm_bg.wasm  quickpix_wasm_bg.wasm.d.ts
js/tests/: basic.test.js  metadata.test.js  utils.test.js
