[package]
name = "quickpix_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "quickpix_wasm"

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen = "0.2.100"
quickpix_core = { path = "../core", package = "quickpix_core" }

[features]
default = ["console_error_panic_hook"]

[profile.release]
lto = true
opt-level = 3
